# static_site

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  poetry_to_pre_commit_mapping.json  pyproject.toml
.github/workflows/: quality.yaml  update.yaml
content/: index.md
content/blog/glorfindel/: index.md
content/blog/majesty/: index.md
content/blog/tom/: index.md
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
public/: index.html
public/blog/glorfindel/: index.html
public/blog/majesty/: index.html
public/blog/tom/: index.html
public/contact/: index.html
src/: block_markdown.py  generate_content.py  htmlnode.py  inline_markdown.py  main.py  markdown_html.py  test_htmlnode.py  test_textnode.py  test_utilities.py  textnode.py  utilities.py
tests/: test_block_markdown.py  test_generate_content.py  test_htmlnode.py  test_inline_markdown.py  test_markdown_html.py  test_textnode.py  test_your_module.py
your_module/: your_module.py
